--- a/Hangman_Game/Views/index.html
+++ b/Hangman_Game/Views/index.html
@@ -16,7 +16,7 @@
             <div class="card-body" > 
               <h4 class="card-title" style="color: white;">Can you guess who this is?</h4>
               <img src='../guess.png' class="card-img-top" style="height: 200px; width: 200px; text-align: center;">
-              <div class="modal" id = "ModalJuego">
+              <!-- <div class="modal" id = "ModalJuego">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -34,7 +34,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
               <div class = "p-4" id =  "input"></div>
               <div class = "p-4" id =  "abecedario"></div>
@@ -43,6 +43,6 @@
           
     </form>
    
-    <script type = "module" src = "../Formulario.js" defer></script>   
+    <script type = "module" src = "../Juego.js" defer></script>   
 </body>
 </html>
