--- a/Hangman_Game/Views/index.html
+++ b/Hangman_Game/Views/index.html
@@ -12,10 +12,10 @@
     
     <form class = "p-4" id = "formularioJuego"style=" text-align: center;" > 
         <div class="card mx-auto" style="text-align: center; border-color:white; 
-          border-width: thick; max-width: 50rem; background-image: url('../backgroundSchool.png');"> 
+          border-width: thick; max-width: 50rem; background-image: url('./Imagenes/backgroundSchool.png');"> 
             <div class="card-body" > 
               <h4 class="card-title" style="color: white;">Can you guess who this is?</h4>
-              <img src='../guess.png' class="card-img-top" style="height: 200px; width: 200px; text-align: center;">
+              <img src='./Imagenes/guess.png' class="card-img-top" style="height: 200px; width: 200px; text-align: center;">
               <!-- <div class="modal" id = "ModalJuego">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
@@ -43,6 +43,6 @@
           
     </form>
    
-    <script type = "module" src = "../Juego.js" defer></script>   
+    <script type = "module" src = "../Formulario.js" defer></script>   
 </body>
 </html>
