--- a/Hangman_Game/Views/index.html
+++ b/Hangman_Game/Views/index.html
@@ -1,48 +1,21 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hangman Game</title>
-    <link rel = stylesheet
-    href = "https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Guess Game</title>
+        <link
+          rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
+        <link rel="stylesheet" href="./estilos.css"/>
+      </head>
 
-<body id = "body" style =  "text-align: center; background-color: #5ae4ba96;"  >  
-    
-    <form class = "p-4" id = "formularioJuego"style=" text-align: center;" > 
-        <div class="card mx-auto" style="text-align: center; border-color:white; 
-          border-width: thick; max-width: 50rem; background-image: url('./Imagenes/backgroundSchool.png');"> 
-            <div class="card-body" > 
-              <h4 class="card-title" style="color: white;">Can you guess who this is?</h4>
-              <img src='./Imagenes/guess.png' class="card-img-top" style="height: 200px; width: 200px; text-align: center;">
-              <!-- <div class="modal" id = "ModalJuego">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title">Modal title</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      <p>Modal body text goes here.</p>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-primary">Save changes</button>
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                  </div>
-                </div>
-              </div> -->
+    <body>
+        <div>
+            <br>
+            <div class="card" style="text-align: center; background-image: url('./Imagenes/Pantalla\ de\ Inicio.png'); ">
+                <button type="submit" class="btnUno">Play</button>
+                <button type="submit" class="btnDos">Instructions</button>
             </div>
-              <div class = "p-4" id =  "input"></div>
-              <div class = "p-4" id =  "abecedario"></div>
-              
-          </div>   
-          
-    </form>
-   
-    <script type = "module" src = "../Formulario.js" defer></script>   
-</body>
+        </div>
+            
+    </body>
 </html>
