--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -18,10 +18,15 @@
           </h4>
           <img src="./Imagenes/Fondo coral.png" class="card-img-top"/>
           <br>
+          <br>
+          <br>
         </div>
-        <div class="formulario" id="input"></div>
         <br>
-        <div class="botones" id="abecedario" style="text-align: center;"></div>
+        <div class="formulario" id="input">
+        </div>
+        <br>
+        <div class="botones" id="abecedario" style="text-align: center;">
+        </div>
         <br>
       </div>
     </form>
