--- a/Hangman_Game/Views/instrucciones.html
+++ b/Hangman_Game/Views/instrucciones.html
@@ -6,7 +6,7 @@
     <title>Guess Game</title>
     <link
       rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./estilos.css"/>
+    <link rel="stylesheet" href="./css/estilos.css"/>
   </head>
   <br>
   <div class="card" style="text-align: center;background-image: url('./Imagenes/Instrucciones.png');">
