--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -6,7 +6,7 @@
     <title>Guess Game</title>
     <link
       rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./estilos.css"/>
+    <link rel="stylesheet" href="./css/estilos.css"/>
   </head>
 
   <body>
@@ -31,7 +31,7 @@
       </div>
     </form>
 
-    <script type="module" src="../Formulario.js" defer></script>
+    <script type="module" src="./js/Formulario.js" defer></script>
 
   </body>
 </html>
