--- a/Hangman_Game/Views/index.html
+++ b/Hangman_Game/Views/index.html
@@ -5,7 +5,7 @@
         <title>Guess Game</title>
         <link
           rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
-        <link rel="stylesheet" href="./estilos.css"/>
+        <link rel="stylesheet" href="./css/estilos.css"/>
       </head>
 
     <body>
