Refactor general y mover archivos

--- a/Hangman_Game/Views/instrucciones.html
+++ b/Hangman_Game/Views/instrucciones.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/estilos.css"/>
   </head>
   <br>
-  <div class="card" style="text-align: center;background-image: url('./Imagenes/Instrucciones.png');">
+  <div class="card" style="text-align: center;background-image: url('./img/Instrucciones.png');">
     <div class="container">
         
         <h1 class="card-title">
@@ -23,7 +23,7 @@
                         1.Click on "Play"
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./Imagenes/botonInicio.png" width="400" />
+                <span class="hiddenimg"><img alt = "Play button" src="./img/botonInicio.png" width="400" />
                 </span>
                
             </h6>
@@ -36,7 +36,7 @@
                         2.After you enter the game, you will be prompted with the question: "Can you guess who this is?"
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./Imagenes/Pregunta.png" width="400" />
+                <span class="hiddenimg"><img alt = "Play button" src="./img/Pregunta.png" width="400" />
                 </span>
                 
             </h6>
@@ -49,7 +49,7 @@
                         3.Below the question, you will find a box with a hint about the occupation you are guessing
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./Imagenes/Pista.png" width="400" />
+                <span class="hiddenimg"><img alt = "Play button" src="./img/Pista.png" width="400" />
                 </span>       
             </h6>
         </div>
@@ -61,7 +61,7 @@
                         4.After reading the hint, select the letters that form the name of the occupation that you think is the correct one
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./Imagenes/botonesAbecedario.png" width="400" />
+                <span class="hiddenimg"><img alt = "Play button" src="./img/botonesAbecedario.png" width="400" />
                 </span> 
             </h6>
         </div>
@@ -73,7 +73,7 @@
                         5.To select any letter, click on the button containing the letter you want
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./Imagenes/seleccionarLetra.png" width="400" />
+                <span class="hiddenimg"><img alt = "Play button" src="./img/seleccionarLetra.png" width="400" />
                 </span> 
                
             </h6>
