--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -11,12 +11,12 @@
 
   <body>
     <form class="p-4" id="formularioJuego" style="text-align: center;">
-      <div class="card" style="background-image: url('./Imagenes/Professiones.png');" >
+      <div class="card" style="background-image: url('./img/Professiones.png');" >
         <div class="card-body">
           <h4 class="card-title">
             Can you guess who this is?
           </h4>
-          <img src="./Imagenes/Fondo coral.png" class="card-img-top"/>
+          <img src="./img/Fondo coral.png" class="card-img-top"/>
           <br>
           <br>
           <br>
@@ -30,7 +30,6 @@
         <br>
       </div>
     </form>
-
     <script type="module" src="./js/Formulario.js" defer></script>
 
   </body>
