--- a/Hangman_Game/Views/index.html
+++ b/Hangman_Game/Views/index.html
@@ -11,7 +11,7 @@
     <body>
         <div>
             <br>
-            <div class="card" style="text-align: center; background-image: url('./Imagenes/Pantalla\ de\ Inicio.png'); ">
+            <div class="card" style="text-align: center; background-image: url('./img/Pantalla\ de\ Inicio.png'); ">
                 <button type="submit" class="btnUno">Play</button>
                 <button type="submit" class="btnDos">Instructions</button>
             </div>
