--- a/Hangman_Game/Views/css/estilos.css
+++ b/Hangman_Game/Views/css/estilos.css
@@ -13,7 +13,9 @@ body{
 .card-img-top{
     height: 200px; 
     width: 200px; 
+    background-color: #ff6565;
     margin-top: 10px;
+    margin-left: 380px;
     text-align: center;
 }
 
@@ -93,6 +95,56 @@ body{
     position: absolute;
     z-index: 2
 }
+
+.flip-card {
+    background-color: transparent;
+    width: 200px;
+    height: 200px;
+    border: 1px solid #ff6565;
+    perspective: 1000px; 
+    margin-top: 10px;
+    margin-left: 380px;
+    text-align: center;
+
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color:#ff6565;
+    color: #ff6565;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: #ff6565;
+    color:white;
+    transform: rotateY(180deg);
+  }
+
 
 
 
