--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -7,6 +7,7 @@
     <link
       rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/estilos.css"/>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -14,9 +15,21 @@
       <div class="card" style="background-image: url('./img/Professiones.png');" >
         <div class="card-body">
           <h4 class="card-title">
-            Can you guess who this is?
+            Can you guess the word?
           </h4>
-          <img src="./img/Fondo coral.png" class="card-img-top"/>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <button type="button" class="btn btn-default">
+                  <br><br><br>
+                  <i class="fas fa-search" style="font-size:50px;color:#a94a50">HINT</i>
+                </button>
+              </div>
+              <div class="flip-card-back" id=pista>
+                
+              </div>
+            </div>
+          </div>
           <br>
           <br>
           <br>
