--- a/Hangman_Game/Views/index.html
+++ b/Hangman_Game/Views/index.html
@@ -12,8 +12,13 @@
         <div>
             <br>
             <div class="card" style="text-align: center; background-image: url('./img/Pantalla\ de\ Inicio.png'); ">
-                <button type="submit" class="btnUno">Play</button>
-                <button type="submit" class="btnDos">Instructions</button>
+                <form action="juego.html">
+                    <button type="submit" class="btnUno">Play</button>
+                </form>
+                <form action="instrucciones.html">
+                    <button type="submit" class="btnDos">Instructions</button>
+                </form>
+                
             </div>
         </div>
             
