--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -25,8 +25,7 @@
                   <i class="fas fa-search" style="font-size:50px;color:#a94a50">HINT</i>
                 </button>
               </div>
-              <div class="flip-card-back" id=pista>
-                
+              <div class="flip-card-back" id = "pista"> 
               </div>
             </div>
           </div>
