--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -18,7 +18,7 @@
           <h4 class="card-title">
             Can you guess the word?
           </h4>
-          <div class="flip-card">
+          <div class="flip-card" id="pista-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
                 <button type="button" class="btn btn-default">
