Se agregan imagenes de los servicios y la modal

--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -31,16 +31,21 @@
             </div>
           </div>
           
-          <div id="myModal" class="modal">
+         <!-- Modal content -->
+         <div id="myModal" class="modal">
 
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>Some text in the Modal..</p>
+          <!-- Modal content -->
+          <div class="modal-content">
+            <div class="modal-header" style="text-align: center;">
+              <h2 id = "tituloModal"></h2>
+              <span class="close">&times;</span>  
             </div>
-          
+            <div class="modal-body">
+              <p id = "oracion"></p>
+              <div id = "imagenPalabra"> </div>
+            </div>
           </div>
-          
+        </div>
           <br>
           <br>
           <br>
@@ -54,6 +59,7 @@
         <br>
       </div>
     </form>
+    
     <script type="module" src="./js/Formulario.js" defer></script>
 
   </body>
