--- a/Hangman_Game/Views/css/estilos.css
+++ b/Hangman_Game/Views/css/estilos.css
@@ -21,6 +21,9 @@ body{
 
 .card-title{
     color: #a94a50;
+    font-family: 'Times New Roman';
+    font-size: 200%;
+    font-weight: bold;
 }
 
 .btnUno {
@@ -163,9 +166,9 @@ body{
 .modal-content {
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
+  border-radius: 2.078em;
 }
 
 /* The Close Button */
@@ -182,6 +185,19 @@ body{
   text-decoration: none;
   cursor: pointer;
 }
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #bae0f5;
+  color: #a94a50;
+  text-align: center;
+  border-radius: 4.078em;
+
+  
+}
+.modal-body {padding: 2px 16px;}
+
+
 
 
 
