--- a/Hangman_Game/Views/css/estilos.css
+++ b/Hangman_Game/Views/css/estilos.css
@@ -162,26 +162,17 @@ body{
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-  border-radius: 2.078em;
-}
-
 /* The Close Button */
 .close {
-  color: #aaa;
+  color: black;
   float: right;
-  font-size: 28px;
+  font-size: 35px;
   font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: #aaa;
   text-decoration: none;
   cursor: pointer;
 }
@@ -190,12 +181,22 @@ body{
   padding: 2px 16px;
   background-color: #bae0f5;
   color: #a94a50;
-  text-align: center;
-  border-radius: 4.078em;
-
-  
+  border-top-left-radius: 2.078em;
+  border-top-right-radius: 2.078em;  
 }
 .modal-body {padding: 2px 16px;}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  border: 1px solid #888;
+  height: 430px;
+  width: 400px; /* Could be more or less, depending on screen size */
+  border-radius: 2.078em;
+  font-weight: bold;
+  font-size: large;
+}
 
 
 
