--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -36,8 +36,8 @@
 
           <!-- Modal content -->
           <div class="modal-content">
-            <div class="modal-header" style="text-align: center;">
-              <h2 id = "tituloModal"></h2>
+            <div class="modal-header">
+              <h2 id = "tituloModal" style="font-weight: bold;"></h2>
               <span class="close">&times;</span>  
             </div>
             <div class="modal-body">
