Correciones en istrucciones, en rutas de audios, en oraciones y en imagenes

--- a/Hangman_Game/Views/instrucciones.html
+++ b/Hangman_Game/Views/instrucciones.html
@@ -81,21 +81,20 @@
 
         <div class = "text">
             <h6>
-               6.If the letter that you selected is incorrect, you will prompted with a message telling you so
+               6.If the letter that you selected is correct or incorrect, you will prompted with a message telling you so
             </h6>
 
         </div>
 
         <div class = "text">
             <h6>
-               7.You will have two extra turns for each word. (For example, a seven-letter word will give 9 turns, and a four-letter word will give you 6 turns)
+               7.You will have as many turns as there are letters in each word. (For example, a seven-letter word will give 7 turns, and a four-letter word will give you 4 turns)
             </h6>
         </div>
 
         <div class = "text">
             <h6>
-               8.When you successfully guess the word or you run out of turns, you can either choose to play again or go back to the main screen to quit the game
-            </h6>
+               8.When you successfully guess the word or you run out of turns, you will be prompted with a windows in which you can find the word, a sentence using that word and an image of the word you were guessing            </h6>
         </div>
         
       </div>
