--- a/Hangman_Game/Views/index.html
+++ b/Hangman_Game/Views/index.html
@@ -13,10 +13,10 @@
             <br>
             <div class="card" style="text-align: center; background-image: url('./img/Pantalla\ de\ Inicio.png'); ">
                 <form action="juego.html">
-                    <button type="submit" class="btnUno">Play</button>
+                    <button type="submit" class="btnPlay">Play</button>
                 </form>
                 <form action="instrucciones.html">
-                    <button type="submit" class="btnDos">Instructions</button>
+                    <button type="submit" class="btnInstructions">Instructions</button>
                 </form>
                 
             </div>
