--- a/Hangman_Game/Views/instrucciones.html
+++ b/Hangman_Game/Views/instrucciones.html
@@ -6,12 +6,22 @@
     <title>Guess Game</title>
     <link
       rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/litera/bootstrap.min.css"/>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="./css/estilos.css"/>
-  </head>
-  <br>
+   
+</head>
+<body>
+  <form action="index.html" style="text-align: left;">
+    <button type="submit" class = "btnDireccionar">
+        <i 
+            class="fas fa-arrow-left" 
+            style="font-size:25px;color:#a94a50; text-align: left;">Back
+        </i>
+    </button>
+  </form>
   <div class="card" style="text-align: center;background-image: url('./img/Instrucciones.png');">
     <div class="container">
-        
+
         <h1 class="card-title">
             Instructions    
         </h1>
@@ -33,7 +43,7 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        2.After you enter the game, you will be prompted with the question: "Can you guess who this is?"
+                        2.After you enter the game, you will be prompted with the question: "Can you guess the word?"
                     </a>
                 </span>
                 <span class="hiddenimg"><img alt = "Play button" src="./img/Pregunta.png" width="400" />
@@ -99,4 +109,4 @@
         
       </div>
   </div>
- 
+</body>
