--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -12,6 +12,14 @@
   </head>
 
   <body>
+    <form action="index.html" style="text-align: left;">
+      <button type="submit" class = "btnDireccionar">
+          <i 
+              class="fas fa-arrow-left" 
+              style="font-size:25px;color:#a94a50; text-align: left;">Back
+          </i>
+      </button>
+    </form>
     <form class="p-4" id="formularioJuego" style="text-align: center;">
       <div class="card" style="background-image: url('./img/Professiones.png');" >
         <div class="card-body">
@@ -30,11 +38,7 @@
               </div>
             </div>
           </div>
-          
-         <!-- Modal content -->
          <div id="myModal" class="modal">
-
-          <!-- Modal content -->
           <div class="modal-content">
             <div class="modal-header">
               <h2 id = "tituloModal" style="font-weight: bold;"></h2>
