Se agregan los sonidos para efectos, se cambia la forma de reproduccion de las pistas

--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -34,7 +34,11 @@
                   <i class="fas fa-search" style="font-size:50px;color:#a94a50">HINT</i>
                 </button>
               </div>
-              <div class="flip-card-back" id = "pista"> 
+              <div class="flip-card-back"> 
+                <div id = "pista"></div>
+                <button type="button" class="btn btn-default" id = "reproducirAudio">
+                  <i class="fas fa-volume-up" style="font-size:50px;color:#a94a50"></i>
+                </button>
               </div>
             </div>
           </div>
