Se agrega la ruta de los audios correcto e incorrecto al html y se reproducen

--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -66,6 +66,9 @@
         <br>
       </div>
       <div id = "audio-placeholder"></div>
+      <audio src="./audios/Effects/Correct.wav" id = "audioCorrecto"></audio>
+      <audio src="./audios/Effects/Incorrect.wav" id = "audioIncorrecto"></audio>
+
     </form>
     
     <script type="module" src="./js/Formulario.js" defer></script>
