Se arregla el error al finalizar el juego, se corrige el error del boton que retorna a la pagina inicial

--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -51,13 +51,9 @@
               <p id = "oracion"></p>
               <div id = "puntaje"> </div>
               <div id = "imagenPalabra"> </div>
-              <form action="index.html" style="text-align: center;">
-                <button type="submit" style=visibility:hidden; class = "btnCerrar" id ="Salir">
-                    <i 
-                        style="font-size:20px;color:#a94a50; text-align: center;">CLOSE
-                    </i>
-                </button>
-              </form>
+              <a href="index.html" style=visibility:hidden; class = "btnCerrar" id ="Salir">
+                  CLOSE
+              </a>
             </div>
           </div>
         </div>
