Se agregan nyevamente las palabras se eliminan consoles

--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -75,6 +75,7 @@
         <audio src="./audios/Effects/Incorrect.wav" id = "audioIncorrecto"></audio>
         <audio src="./audios/Effects/lost.wav" id = "audioPierde"></audio>
         <audio src="./audios/Effects/winner.wav" id = "audioGana"></audio>
+        <audio src = "./audios/Effects/Ended.wav" id = "finalizo"></audio>
       </div>
     
 
