--- a/Hangman_Game/Views/instrucciones.html
+++ b/Hangman_Game/Views/instrucciones.html
@@ -19,7 +19,7 @@
         </i>
     </button>
   </form>
-  <div class="card" style="text-align: center;background-image: url('./img/Instrucciones.png');">
+  <div class="cardInstrucciones" style="text-align: center;background-image: url('./img/Instrucciones.png');">
     <div class="container">
 
         <h1 class="card-title">
@@ -33,7 +33,7 @@
                         1.Click on "Play"
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./img/botonInicio.png" width="400" />
+                <span class="hiddenimg"><img src="./img/Instrucciones/botonInicio.png" width="400" />
                 </span>
                
             </h6>
@@ -46,7 +46,7 @@
                         2.After you enter the game, you will be prompted with the question: "Can you guess the word?"
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./img/Pregunta.png" width="400" />
+                <span class="hiddenimg"><img  src="./img/Instrucciones/pregunta.png" width="400" />
                 </span>
                 
             </h6>
@@ -56,10 +56,10 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        3.Below the question, you will find a box with a hint about the occupation you are guessing
+                        3.Below the question, you will find a box with the word "HINT" 
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./img/Pista.png" width="400" />
+                <span class="hiddenimg"><img  src="./img/Instrucciones/Pista1.png" width="400" />
                 </span>       
             </h6>
         </div>
@@ -68,10 +68,10 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        4.After reading the hint, select the letters that form the name of the occupation that you think is the correct one
+                        4. Put your mouse over the box in order to read the hint about the word you are guessing (if you want to listen the hint, press the sound icon)
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./img/botonesAbecedario.png" width="400" />
+                <span class="hiddenimg"><img src="./img/Instrucciones/Pista2.png" width="400" />
                 </span> 
             </h6>
         </div>
@@ -80,10 +80,22 @@
             <h6>
                 <span class="hiddentxt">
                     <a>
-                        5.To select any letter, click on the button containing the letter you want
+                        5.After reading the hint, select the letters that form the name of the occupation that you think is the correct one
                     </a>
                 </span>
-                <span class="hiddenimg"><img alt = "Play button" src="./img/seleccionarLetra.png" width="400" />
+                <span class="hiddenimg"><img  src="./img/Instrucciones/teclado.png" width="400" />
+                </span> 
+            </h6>
+        </div>
+
+        <div class = "text">
+            <h6>
+                <span class="hiddentxt">
+                    <a>
+                        6.To select any letter, click on the button containing the letter you want
+                    </a>
+                </span>
+                <span class="hiddenimg"><img src="./img/Instrucciones/seleccionarLetra.png" width="400" />
                 </span> 
                
             </h6>
@@ -91,22 +103,22 @@
 
         <div class = "text">
             <h6>
-               6.If the letter that you selected is correct or incorrect, you will prompted with a message telling you so
-            </h6>
-
-        </div>
-
-        <div class = "text">
-            <h6>
-               7.You will have as many turns as there are letters in each word. (For example, a seven-letter word will give 7 turns, and a four-letter word will give you 4 turns)
+                <span class="hiddentxt">
+                    <a>
+                        7.You will have as many turns as there are letters in each word. (For example, a seven-letter word will give you 7 turns, and a four-letter word will give you 4 turns)
+                    </a>         
+                </span>                  
             </h6>
         </div>
 
-        <div class = "text">
-            <h6>
-               8.When you successfully guess the word or you run out of turns, you will be prompted with a windows in which you can find the word, a sentence using that word and an image of the word you were guessing            </h6>
-        </div>
-        
-      </div>
+      <div class = "text">
+        <h6>
+            <span class="hiddentxt">
+                <a>
+                    8.When you successfully guess the word or you run out of turns, you will be prompted with a windows in which you can see your score. After that, you will be prompted with a windows in which you can find the word, a sentence using that word and an image of the word you were guessing
+                </a>
+            </span> 
+        </h6>
+    </div>
   </div>
 </body>
