--- a/Hangman_Game/Views/juego.html
+++ b/Hangman_Game/Views/juego.html
@@ -51,7 +51,7 @@
               <p id = "oracion"></p>
               <div id = "puntaje"> </div>
               <div id = "imagenPalabra"> </div>
-              <a href="index.html" style=visibility:hidden; class = "btnCerrar" id ="Salir">
+              <a href="index.html" style="visibility:hidden";  class = "btnCerrar" id ="Salir">
                   CLOSE
               </a>
             </div>
