--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,16 +4,9 @@
     height: 600px;
     width: 1000px;
     margin: auto;
+    top: -30px;
+    max-width: 100%;
     background-color: #bae0f5;
-}
-
-.cardInstrucciones {
-  text-align: center;
-  border-color: #ff6565;
-  height: 600px;
-  width: 1000px;
-  margin: auto;
-  background-color: #bae0f5;
 }
 
 body{
@@ -94,10 +87,11 @@ body{
 
 .modalInformacion{
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto; 
   border: 1px solid #888;
   height: 300px;
-  width: 390px; /* Could be more or less, depending on screen size */
+  width: 390px;
+  max-width: 100%;
   border-radius: 2.078em;
   font-weight: bold;
   font-size: large;
@@ -154,12 +148,13 @@ body{
     border: 1px solid #ff6565;
     perspective: 1000px; 
     margin-top: 10px;
-    margin-left: 380px;
+    margin-left: 40%;
+    max-width: 100%;
     text-align: center;
 
   }
   
-  /* This container is needed to position the front and back side */
+ 
   .flip-card-inner {
     position: relative;
     width: 100%;
@@ -169,27 +164,27 @@ body{
     transform-style: preserve-3d;
   }
   
-  /* Do an horizontal flip when you move the mouse over the flip box container */
+  
   .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
   }
   
-  /* Position the front and back side */
+ 
   .flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
+    -webkit-backface-visibility: hidden; 
     backface-visibility: hidden;
   }
   
-  /* Style the front side (fallback if image is missing) */
+  
   .flip-card-front {
     background-color:#ff6565;
     color: #ff6565;
   }
   
-  /* Style the back side */
+  
   .flip-card-back {
     background-color: #ff6565;
     color: white;
@@ -197,21 +192,19 @@ body{
     text-align: center;
     transform: rotateY(180deg);
   }
-  /* The Modal (background) */
+  
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
-/* The Close Button */
+
 .close {
   color: black;
   float: right;
@@ -235,13 +228,13 @@ body{
 }
 .modal-body {padding: 2px 16px;}
 
-/* Modal Content/Box */
+
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto; 
   border: 1px solid #888;
   height: 470px;
-  width: 400px; /* Could be more or less, depending on screen size */
+  width: 400px; 
   border-radius: 2.078em;
   font-weight: bold;
   font-size: large;
