--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,7 @@ body{
     background-color: #ff6565;
     margin-top: 10px;
     margin-left: 380px;
+    max-width: 100%;
     text-align: center;
 }
 
@@ -27,6 +28,7 @@ body{
     font-family: 'Times New Roman';
     font-size: 200%;
     font-weight: bold;
+    max-width: 100%;
 }
 
 .btnPlay {
@@ -159,6 +161,7 @@ body{
     position: relative;
     width: 100%;
     height: 100%;
+    max-width: 100%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
@@ -174,6 +177,7 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
+    max-width: 100%;
     -webkit-backface-visibility: hidden; 
     backface-visibility: hidden;
   }
@@ -200,6 +204,7 @@ body{
   left: 0;
   width: 100%; 
   height: 100%; 
+  max-width: 100%;
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0,0.4); 
 }
