--- a/css/estilos.css
+++ b/css/estilos.css
@@ -84,6 +84,19 @@ body{
   color:white
  }
 
+ .btnLenguaje{
+    background-color: #bae0f5;
+    color: #a94a50;
+    font-family: 'Times New Roman';
+    font-weight: bold;
+    font-size: 50;
+    width: 70px;
+    height: 30px;
+    border: none;
+    border-color: #a94a50;
+    border-radius: 10px;
+ }
+
 .modalInformacion{
   background-color: #fefefe;
   margin: 15% auto; 
